--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-Effective Date: [17/11/2024]
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+</head>
+<body>
+    <h1>Privacy Policy</h1>
+ <p>Effective Date: [17/11/2024]</p>
+<p>
 ListenBack ("we," "us," or "our") is committed to protecting your privacy. This Privacy Policy outlines how our mobile application, ListenBack (the "App"), interacts with your data. Please read this policy carefully to understand how we use and protect the information processed by the App.
 
 1. Offline Functionality
@@ -33,6 +42,9 @@ We do not collect, store, or transmit any data. As such, the security of your da
 We may update this Privacy Policy from time to time to reflect changes in the App’s functionality or legal requirements. You will be notified of any changes through the App or by other means if necessary. Continued use of the App after any changes indicates your acceptance of the revised policy.
 
 7. Contact Us
-If you have any questions about this Privacy Policy or your privacy rights, please contact us at:  ListenBack_Novurae@outlook.com
+If you have any questions about this Privacy Policy or your privacy rights, please contact us at:  
 
-Email: [Your Contact Email]
+Email: ListenBack_Novurae@outlook.com
+  .</p>
+</body>
+</html>
