--- a/index.html
+++ b/index.html
@@ -3,48 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>Privacy Policy - ListenBack</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        h1, h2, h3 {
+            color: #2c3e50;
+        }
+        header, footer {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        section {
+            margin-bottom: 20px;
+            padding: 15px;
+            background: #ffffff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            font-size: 0.9em;
+            color: #888;
+        }
+        a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
+
+<header>
     <h1>Privacy Policy</h1>
- <p>Effective Date: [17/11/2024]</p>
-<p>
-ListenBack ("we," "us," or "our") is committed to protecting your privacy. This Privacy Policy outlines how our mobile application, ListenBack (the "App"), interacts with your data. Please read this policy carefully to understand how we use and protect the information processed by the App.
+    <p>Effective Date: November 17, 2024</p>
+</header>
 
-1. Offline Functionality
-ListenBack is designed to function entirely offline. The App does not collect, transmit, or store any personal or usage data externally. All features of the App operate directly on your device without requiring an internet connection or any server-based interaction.
+<section>
+    <h2>Introduction</h2>
+    <p>Welcome to ListenBack! This privacy policy details how ListenBack, developed by Novurae, handles information and respects your privacy. Using our app confirms your agreement to the practices described in this policy.</p>
+</section>
 
-2. Information We Process
-While we do not collect or store personal information, certain features of the App require access to your device’s resources:
+<section>
+    <h2>Information We Process</h2>
+    <p>ListenBack operates entirely offline and does not transmit or store personal data on any external servers. Here are the types of information the app processes locally on your device:</p>
+    <ul>
+        <li><strong>Audio Recordings:</strong> Created and managed by you; stored only on your device.</li>
+        <li><strong>Location Data:</strong> Used for setting location-based alarms. This data remains on your device and is not accessible to us.</li>
+        <li><strong>Alarm Settings:</strong> Configurations for alarms are handled by your device and never transmitted outside.</li>
+    </ul>
+</section>
 
-a. Location Data
-Purpose: Location data may be accessed to enable specific features, such as location-based alarms or enhanced recording functionalities.
-Data Use: This data is processed locally on your device and is not transmitted, stored, or shared with us or any third party.
-User Control: You have full control over granting or revoking location permissions at any time through your device’s settings.
-Scope: The App uses location data solely for its intended functionality and does not retain this information once the feature is complete.
-b. Audio Recording
-Purpose: The App accesses your microphone to enable audio recording features.
-Data Use: Recorded audio files are stored locally on your device. We do not have access to or collect these recordings.
-User Control: You can manage or delete recordings directly from your device.
-c. Notifications and Alarms
-Purpose: The App may send notifications for alarms or timers you set within the App.
-Data Use: Notifications are generated locally and do not involve the transmission of data outside your device.
-3. Your Rights and Choices
-Permissions Management: The App requires specific permissions to function correctly, such as access to your microphone and location. You can manage these permissions through your device’s settings.
-Privacy by Design: The App is intentionally designed to avoid any collection of user data, ensuring your activity remains private and secure.
-4. Third-Party Services
-ListenBack does not use any third-party services, APIs, or integrations that would transmit or share your data.
+<section>
+    <h2>Permissions Required</h2>
+    <p>To perform its functions, ListenBack requires several permissions. These permissions are necessary for accessing device functionalities but do not allow the app to gather data for external use:</p>
+    <ul>
+        <li><strong>Audio Recording:</strong> To create audio clips as per user commands.</li>
+        <li><strong>Location Access:</strong> To enable functionality of location-based alarms.</li>
+        <li><strong>Storage Access:</strong> To save and manage recordings and alarm configurations locally.</li>
+        <li><strong>Exact Alarm Scheduling:</strong> To schedule alarms that trigger at precise times.</li>
+    </ul>
+</section>
 
-5. Data Security
-We do not collect, store, or transmit any data. As such, the security of your data is fully reliant on your device's security measures. We recommend using robust device security practices, such as PIN codes or biometric locks, to protect your data.
+<section>
+    <h2>Your Rights and Controls</h2>
+    <p>As ListenBack does not collect or store personal data, there are no direct means to request data access or deletion. All data you create and manage through the app resides solely on your device, ensuring you maintain complete control over your personal information and its security.</p>
+</section>
 
-6. Changes to This Privacy Policy
-We may update this Privacy Policy from time to time to reflect changes in the App’s functionality or legal requirements. You will be notified of any changes through the App or by other means if necessary. Continued use of the App after any changes indicates your acceptance of the revised policy.
+<section>
+    <h2>Changes to This Policy</h2>
+    <p>We may update this privacy policy to reflect changes to our practices or for other operational, legal, or regulatory reasons. We encourage you to review this page periodically for the latest information on our privacy practices.</p>
+</section>
 
-7. Contact Us
-If you have any questions about this Privacy Policy or your privacy rights, please contact us at:  
+<footer>
+    <p>&copy; 2024 Novurae - ListenBack. All rights reserved.</p>
+    <p>Contact us with any questions or concerns at <a href="mailto:ListenBack_Novurae@outlook.com">ListenBack_Novurae@outlook.com</a>.</p>
+</footer>
 
-Email: ListenBack_Novurae@outlook.com
-  .</p>
 </body>
 </html>
