--- a/index.html
+++ b/index.html
@@ -4,27 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy</title>
+     <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        h1, h2, h3 {
+            color: #2c3e50;
+        }
+        header, footer {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        section {
+            margin-bottom: 20px;
+            padding: 15px;
+            background: #ffffff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            font-size: 0.9em;
+            color: #888;
+        }
+        a {
+            color: #3498db;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
+<header>
     <h1>Privacy Policy for ListenBack</h1>
-    <p><strong>Effective Date:</strong> [Date]</p>
-
+    <p><strong>Effective Date:</strong> [17/11/2024]</p>
+</header>
+    <section>
     <h2>1. Introduction</h2>
     <p>ListenBack, developed by Novurae, is committed to protecting your privacy. This Privacy Policy outlines the types of information that ListenBack may process, how we use this information, and the steps we take to protect your privacy when you use our app.</p>
+    </section>
 
+    <section>
     <h2>2. Data Collection and Use</h2>
     <p>ListenBack is an offline app that does not require an internet connection for its primary functionalities. The app accesses and processes data locally on your device for the following purposes:</p>
     <ul>
         <li><strong>Location Tracking:</strong> We access your device's location services to provide functionalities related to location-based reminders. This data is not transmitted off your device and is processed locally.</li>
         <li><strong>Audio Recording:</strong> We access the microphone to record audio based on user commands. These recordings are stored locally on your device and are not shared with any third parties.</li>
+        <li><strong>Alarm Settings:</strong> Configurations for alarms are handled by your device and never transmitted outside.</li>
     </ul>
-
+    </section>
+    
+    <section>
     <h2>3. Data Protection Officer</h2>
     <p>We have not appointed a Data Protection Officer as our data processing does not meet the threshold requiring one under the General Data Protection Regulation (GDPR). However, you can contact us with any questions or concerns regarding our use of your personal data.</p>
+    </section>
 
+    <section>
     <h2>4. Data Breach Notification</h2>
     <p>In the unlikely event of a data breach, we will notify all affected individuals within 72 hours of becoming aware of the breach, in compliance with GDPR requirements.</p>
+    </section>
 
+    <section>
     <h2>5. User Rights</h2>
     <p>Under the GDPR and other data protection laws, users have the right to:</p>
     <ul>
@@ -36,20 +88,29 @@
         <li>Request the portability of their personal data.</li>
     </ul>
     <p>Users can exercise these rights by contacting us directly.</p>
+    </section>
 
+    <section>
     <h2>6. International Data Transfers</h2>
     <p>Currently, all data processed by ListenBack is stored and handled locally on your device. No international data transfers occur as part of our app’s operations.</p>
+    </section>
 
+    <section>
     <h2>7. Children’s Privacy</h2>
     <p>ListenBack complies with the Children's Online Privacy Protection Act (COPPA). Our app does not knowingly collect or store any personal information from children under the age of 13. If a parent or guardian believes that their child has provided us with personal information without their consent, they should contact us, and we will remove such information from our servers.</p>
+    </section>
 
+    <section>
     <h2>8. Changes to This Privacy Policy</h2>
     <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the effective date.</p>
+    </section>
 
+    <section>
     <h2>9. Contact Us</h2>
     <p>If you have any questions about this Privacy Policy, please contact us:</p>
     <ul>
         <li>Email: <a href="mailto:ListenBack_Novurae@outlook.com">ListenBack_Novurae@outlook.com</a></li>
     </ul>
+    </section>
 </body>
 </html>
