--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
     </section>
 
     <section>
+    <h2>Permissions Required</h2>
+    <p>To perform its functions, ListenBack requires several permissions. These permissions are necessary for accessing device functionalities but do not allow the app to gather data for external use:</p>
+    <ul>
+        <li><strong>Audio Recording:</strong> To create audio clips as per user commands.</li>
+        <li><strong>Location Access:</strong> To enable functionality of location-based alarms.</li>
+        <li><strong>Storage Access:</strong> To save and manage recordings and alarm configurations locally.</li>
+        <li><strong>Exact Alarm Scheduling:</strong> To schedule alarms that trigger at precise times.</li>
+    </ul>
+</section>
+    
+    <section>
     <h2>6. International Data Transfers</h2>
     <p>Currently, all data processed by ListenBack is stored and handled locally on your device. No international data transfers occur as part of our app’s operations.</p>
     </section>
